--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
 xxl.job.admin.addresses=http://127.0.0.1:8080/
-### xxl-job executor address
-xxl.job.executor.appname=zlikun-xxl-job
-xxl.job.executor.ip=
+xxl.job.executor.appname=${spring.application.name:zlikun-xxl-job}
 xxl.job.executor.port=9999
-### xxl-job, access token
-xxl.job.accessToken=
-### xxl-job log path
-xxl.job.executor.logpath=/data/logs/xxl-job/zlikun-xxl-job
-### xxl-job log retention days
-xxl.job.executor.logretentiondays=-1
